# langnet-cli

./: .gitignore  .gitmodules  AGENTS.md  CITATIONS.md  DEVELOPER.md  GETTING_STARTED.md  IN-PROGRESS.md  LICENSE  LLM_PROVIDER_GUIDE.md  PEDAGOGICAL_ROADMAP.md  PEDAGOGY.md  PHASE1_DETAILED_PLAN.md  README.md  REFERENCE.md  TODO.md  create_facts_fixtures.py  debug_codes_parser.py  debug_full_html.py  debug_heritage.py  devenv.nix  devenv.requirements.txt  justfile  pyproject.toml  resume.md  summary.md  test_heritage_connectivity.py  test_heritage_direct.py  test_heritage_direct2.py  test_heritage_direct3.py  test_heritage_direct4.py  test_heritage_encodings.py  test_heritage_infrastructure.py  test_heritage_words.py
.justscripts/: __init__.py  autobot.py  diogenes_commands.py  diogenes_parse.py  fuzz_commands.py  fuzz_tool_outputs.py  lex_translation_demo.py  model_routing.py  ruff_commands.py  run-dev-tool  run-langnet-cli  server_commands.py  tool_parse.py  triples_dump.py
.opencode/: opencode.json  opencode.json.backup
codesketch/: README.md
data/: README.md
docs/: BASELINE_AND_ROADMAP.md  CITATIONS.md  CLEANUP_GUIDE.md  DEVELOPER.md  DICO_BILINGUAL_PIPELINE.md  DOCUMENTATION_AUDIT.md  EXECUTION_PLAN.md  FOSTER_FUNCTIONAL_GRAMMAR_EXAMPLES.md  FUTURE_WORK.md  GETTING_STARTED.md  GOALS.md  GRAMMAR_LEARNING_OVERLAY.md  HERITAGE_INTEGRATION_PLAN.md  HERITAGE_PLAN.md  IMPLEMENTATION_COMPLETION_PLAN.md  IMPLEMENTATION_STATUS.md  IN-PROGRESS.md  JUST_RECIPE_HEALTH.md  OUTPUT_GUIDE.md  PEDAGOGICAL_PHILOSOPHY.md  PHASE2_IMPLEMENTATION_PLAN.md  POLESTAR-OF-ORION.md  POS_PARSING_TEST_CASES.md  PROJECT_STATUS.md  READER_CLI_BEGINNER_GUIDE.md  READER_CLI_HANDOFF.md  READER_CORPUS_STATUS.md  READER_DATA_BUILD.md  READER_METADATA_ENRICHMENT_LOOP.md  README.md  ROADMAP.md  (+17 more)
(+1599 files in other folders)
