[tool.poetry]
name = "langnet"
version = "0.1.0"
description = ""
authors = ["Orpheus <orpheus@computerdream.club>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.10" # matching cltk versions for poetry
setuptools = "75.1.0" # 75.8.1 currently broken
cltk = "^1.4.0"
# pycdsl = "^0.9.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
# gunicorn = "^23.0.0"
# flask = "^3.1.0"
sh = "^2.2.1"
html5lib = "^1.1"
betacode = "^1.0"
pygtrie = "^2.5.0"
lark = "^1.2.2"
rich = "^13.9.4"
click = "^8.1.7"
cattrs = "^24.1.2"
indic-transliteration = "^2.3.69"

# aisuite = "^0.1.13"
# vertexai = "^1.71.1"
# google-cloud-translate = "^3.23.0"
spacy = "3.7.5"
starlette = "^0.52.1"
uvicorn = "^0.40.0"
orjson = "^3.10.14"
python-multipart = "^0.0.20"
structlog = "^24.2.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.test.dependencies]
nose2 = "^0.15.1"
# expecttest = "^0.3.0" # not currently supporting utf-8 https://github.com/pytorch/expecttest/issues/27

[tool.poe.env]
PYTHONPATH = "${POE_ROOT}/src:${PYTHONPATH}"
# VAR2 = "BAR BAR BLACK ${FARM_ANIMAL}"
# EXPECTTEST_ACCEPT = "1"

# [tool.poe.tasks]
# serve = "gunicorn --chdir=. --access-logfile=- --error-logfile=- -w1 -b 0.0.0.0:5050 langnet.wsgi:app"
# dev.cmd = "flask --app langnet.wsgi:app run --debug --host 0.0.0.0 --port 5050"
# dev.envfile = "${POE_GIT_DIR}/.dev-envfile"
# test.cmd = "nose2 -s tests"
# shell = "python3"
# sidecar = "python3 -m langnet.diogenes.cli_util"

[tool.poetry.scripts]
langnet-cli = "langnet.cli:main"
langnet-dg-reaper = "langnet.diogenes.cli_util:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
